--- a/index.html
+++ b/index.html
@@ -170,24 +170,27 @@
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                                <input class="form-control" id="name" type="text" placeholder="" data-sb-validations="" />
                                 <label for="name">Andrea Rendon</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                             <!--    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>--> 
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+                                <input class="form-control" id="email" type="email" placeholder="" data-sb-validations="" />
                                 <label for="email">andrea20rendon@gmail.com</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <!-- <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>--> 
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
+                                <input class="form-control" id="phone" type="tel" placeholder="" data-sb-validations="" />
                                 <label for="phone">3228768021</label>
+                                <div class="form-floating mb-3">
+                                <input class="form-control" id="Facebook" type="text" placeholder="" data-sb-validations="" />
                                 <label for="fa-facebook-f">Andrea Rendon</label>
+                                <input class="form-control" id="Instagram" type="text" placeholder="" data-sb-validations="" />
                                 <label for="instagram">_rendon_26</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <!-- <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>--> 
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
