--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                                 <div class="form-floating mb-3">
                                 <input class="form-control" id="Facebook" type="text" placeholder="" data-sb-validations="" />
                                 <label for="fa-facebook-f">Andrea Rendon</label>
+                                <div class="form-floating mb-3">
                                 <input class="form-control" id="Instagram" type="text" placeholder="" data-sb-validations="" />
                                 <label for="instagram">_rendon_26</label>
                                 <!-- <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>--> 
