--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
-                            <div class="form-floating mb-3">
+                            <div class="mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="" data-sb-validations="" />
                                 <label for="name">Andrea Rendon</label>
                              <!--    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>--> 
