--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="contactForm">
-                                <input class="form-control" id="name" type="text" placeholder="" data-sb-validations="" />
+                                <input class="" id="name" type="text" placeholder="" data-sb-validations="" />
                                 <label for="name">Nombre: Andrea Rendon</label>
                              <!--    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>--> 
                             </div>
