--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                         <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
-                            <div class="contactForm">
-                                <input class="Nombre: Andrea Rendon" id="name" type="text" placeholder="" data-sb-validations="" />
+                            <div class="">
+                                <input class="" id="" type="" placeholder="" data-sb-validations="" />
                                 <label for="name">Nombre: Andrea Rendon</label>
                              <!--    <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>--> 
                             </div>
