--- a/index.html
+++ b/index.html
@@ -176,9 +176,15 @@
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="" data-sb-validations="" />
-                                <label for="email">andrea20rendon@gmail.com</label>                                
-                                <div class="invalid-feedback" data-sb-feedback=""></div> 
+                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                                <h3 for="name">andrea29rendon@gmail.com</h3>
+                                <div class="invalid-feedback" data-sb-feedback="name:required"></div>
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                                <h3 for="name">_rendon_26 </h3><a href="https://www.instagram.com/_rendon_26/"></a>
+                                <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
