--- a/index.html
+++ b/index.html
@@ -171,25 +171,25 @@
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <h3 for="name">Andrea Rendon</h3>
+                                <h3 for="name">Nombre: Andrea Rendon</h3>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <h3 for="name">andrea29rendon@gmail.com</h3>
+                                <h3 for="name">Correo: andrea20rendon@gmail.com</h3>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
 
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <h3 for="name">_rendon_26 </h3><a href="https://www.instagram.com/_rendon_26/"></a>
+                                <h3 for="name">Instagram: _rendon_26 </h3><a href="https://www.instagram.com/_rendon_26/"></a>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <h3 for="name">3228768021</h3>
+                                <h3 for="name">Celular: 3228768021</h3>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
                             
