--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
                                 <h3 for="name">Celular: 3228768021</h3>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
+
+                        </div>
                             
+
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
