--- a/index.html
+++ b/index.html
@@ -183,7 +183,15 @@
 
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <h3 for="name">Instagram: _rendon_26 </h3><a href="https://www.instagram.com/_rendon_26/"></a>
+                                <h3 for="name">Instagram: _rendon_26 </h3>
+                                <a href="https://www.instagram.com/_rendon_26/">
+                                                                    </a>
+                                <div class="invalid-feedback" data-sb-feedback="name:required"></div>
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                                <h3 for="name">Facebook: Andrea Rendon</h3>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
                             <!-- Phone number input-->
