--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                               <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>-->
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/html.png" alt="..." />
                         </div>
@@ -76,7 +76,7 @@
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
-                            
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
@@ -185,7 +185,8 @@
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
                                 <h3 for="name">Instagram: _rendon_26 </h3>
                                 <a href="https://www.instagram.com/_rendon_26/">
-                                                                    </a>
+                                    
+                                </a>
                                 <div class="invalid-feedback" data-sb-feedback="name:required"></div>
                             </div>
 
