--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content "><i class=""></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/c#.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/c.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
