--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content "><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/visual.gif" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/v.jfif" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -97,9 +97,9 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content "><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/java.jfif" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/java.jfif" alt="" />
                         </div>
-                       </div>
+                     </div>
                         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                             <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
